--- a/newsletter.html
+++ b/newsletter.html
@@ -1,11 +1,17 @@
 <p>
-    <strong>Indiba</strong> os devolverá, un aspecto sereno, joven,firme y dulce. Un efecto que marca la diferencia en vuestra cara
-    después de pasar por él. Una sola sesión es suficiente para obtener un resultado real y palpable.
-    Si bien es cierto que su efecto es acumulativo: rejuvenece la piel, reafirma el rostro, cuello y regenera el
-    colágeno y elastina, y que cuantas más sesiones disfrutéis más beneficios obtendréis, también es cierto que
-    desde la primera sesión el aspecto de la piel mejora de manera radical.
+    ¿Aún no conoces los beneficios del tratamiento Indiba Deep Beauty? ¿A qué
+    estás esperando?
 </p>
-</p></td></tr>
+<p>
+    ¿No sabes en qué consiste? En un tratamiento efectivo, no invasivo, que mejora
+    el aspecto de nuestra piel en una sola sesión. ¿Pedís mucho? Puede, pero os
+    aseguramos que es posible. Indiba, modalidad de radiofrecuencia capaz de hacer por
+    vuestro rostro todo esto. Un método increíble para la piel capaz de mejorar la flacidez,
+    hidratación... ¡Resulta casi mágico!
+</p>
+</p>
+</td>
+</tr>
 <tr>
     <td bgcolor="#ffffff" align="left">
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -14,11 +20,24 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-86" target="_blank"
-                                   style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-86" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
-                                    COMPRA
+                                    COMPRA INDIBA FACIAL
+                                </a>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px;">
+                    <table border="0" cellspacing="0" cellpadding="0">
+                        <tr>
+                            <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-88" target="_blank"
+                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
+                                                    text-decoration: none; text-decoration: none; padding: 15px 25px;
+                                                    border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
+                                    COMPRA INDIBA CORPORAL
                                 </a>
                             </td>
                         </tr>
@@ -32,14 +51,19 @@
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
         <p>
-            Es un tratamiento,no invasivo e indoloro, que produce una diatermia localizada en nuestro cuerpo. De efectos solo
-            beneficiosos, totalmente inocuo. Se trata de un calentamiento local de tejidos en una zona del cuerpo bajo la
-            influencia de un campo eléctrico o magnético. Este aumento de temperatura controlado se produce por la
-            circulación de una corriente de alta frecuencia, que provoca un aumento de la temperatura desde el interior de las
-            propias células. La intensidad del calor depende de la zona y problema estético a tratar. La sensación que
-            produce es relajante y agradable. ¿Te lo vas a perder?
-        </p><p>
-        Este mes lo encontraréis en nuestros centros a un precio de 47€ la sesión facial o corporal. ¡Os esperamos!
+            Un cambio desde la primera sesión, Indiba os devolverá un aspecto sereno,
+            joven, firme y dulce. Un efecto que marca la diferencia en vuestra cara después de pasar
+            por ella. Una sola sesión es suficiente para obtener un resultado real y palpable.
+        </p>
+        <p>
+            Si bien es cierto que su efecto es acumulativo: rejuvenece la piel, reafirma el
+            rostro, cuello y regenera el colágeno y elastina, y que cuantas más sesiones disfrutéis
+            más beneficios obtendrás. La sensación que produce es relajante y agradable.
+        </p>
+        <p>
+            ¿Te lo vas a perder?
+            Este mes lo encontraréis en nuestros centros a un precio de 47€ la sesión facial
+            o corporal. ¡Os esperamos!
         </p>
         <p>
             <strong>
