--- a/promo.html
+++ b/promo.html
@@ -1,33 +1,15 @@
 <p>
-    Este mes desde In and Out os traemos una experiencia sensorial cítrica. Exfoliación + envoltura reafirmante,
-    hidratante y antioxidante de la mano de Natura Bissé.
-    ¿Qué incluye?
+    Un cambio desde la primera sesión, Indiba os devolverá un aspecto sereno,
+    joven, firme y dulce. Un efecto que marca la diferencia en vuestra cara después de pasar
+    por ella. Una sola sesión es suficiente para obtener un resultado real y palpable.
 </p>
-<ul>
-    <li>
-        Aromaterapia y alineación corporal.
-    </li>
-    <li>
-        Efectiva exfoliación cítrica.
-    </li>
-    <li>
-        Concetrado reafirmante con ácido ascórbico, extracto de jengibre y fruto de kigelia.
-    </li>
-    <li>
-        Masaje reafirmante corporal.
-    </li>
-</ul>
-
-<p>Beneficios:</p>
-<ul>
-    <li>
-        Ideal como tratamiento reafirmante.
-    </li>
-    <li>
-        Hidrata y combate el envejecimiento prematuro. -Previene la flacidez.
-    </li>
-</ul>
 <p>
-    ¿Quieres saber por cuánto estará todo el mes de Febrero?<strong> Sólo 50€ en vez de 70€ precio habitual</strong>.
-    ¿Te lo vas a perder? ¡Os esperamos!
+    Si bien es cierto que su efecto es acumulativo: rejuvenece la piel, reafirma el
+    rostro, cuello y regenera el colágeno y elastina, y que cuantas más sesiones disfrutéis
+    más beneficios obtendrás. La sensación que produce es relajante y agradable.
+</p>
+<p>
+    ¿Te lo vas a perder?
+    Este mes lo encontraréis en nuestros centros a un precio de 47€ la sesión facial
+    o corporal. ¡Os esperamos!
 </p>
