cart/cash from calendar

--- a/src/apps/cart/cart.html
+++ b/src/apps/cart/cart.html
@@ -75,7 +75,7 @@
         <label for="cap">CODIGO POSTAL:</label>
         <input #cap id="cap" name="cap" type="text"/>
         <br/>
-        <label for="cap">TELEFONO:</label>
+        <label for="tel">TELEFONO:</label>
         <input #tel id="tel" name="tel" type="tel"/>
         <br/>
         <h4>ES UN REGALO?</h4>
