--- a/src/apps/cart/empty-cart.html
+++ b/src/apps/cart/empty-cart.html
@@ -4,4 +4,7 @@
 
     <div #icons></div>
 
+    <br/><br />
+    <h3>BILLETE REGALO EN "PDF" INCLUIDO</h3>
+    <p>Haz click <a href="/api/pdf/exemplo" target="_blank">aqui</a> para ver un exemplo</p>
 </form>
