--- a/newsletter.html
+++ b/newsletter.html
@@ -1,13 +1,8 @@
 <p>
-    ¿Aún no conoces los beneficios del tratamiento Indiba Deep Beauty? ¿A qué
-    estás esperando?
-</p>
-<p>
-    ¿No sabes en qué consiste? En un tratamiento efectivo, no invasivo, que mejora
-    el aspecto de nuestra piel en una sola sesión. ¿Pedís mucho? Puede, pero os
-    aseguramos que es posible. Indiba, modalidad de radiofrecuencia capaz de hacer por
-    vuestro rostro todo esto. Un método increíble para la piel capaz de mejorar la flacidez,
-    hidratación... ¡Resulta casi mágico!
+    ¿Quieres recuperar tu silueta después del verano? en In&Out hemos preparado
+    una promoción de Noviembre perfecta para dar el primer paso a la hora de recuperar tu
+    figura. ¿Quieres saber más? No te pierdas el tratamiento de maderoterapia corporal que
+    tenemos para ti.
 </p>
 </p>
 </td>
@@ -20,24 +15,10 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-86" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-77" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
-                                    COMPRA INDIBA FACIAL
-                                </a>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-                <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px;">
-                    <table border="0" cellspacing="0" cellpadding="0">
-                        <tr>
-                            <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-88" target="_blank"
-                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
-                                                    text-decoration: none; text-decoration: none; padding: 15px 25px;
-                                                    border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
-                                    COMPRA INDIBA CORPORAL
+                                    COMPRA
                                 </a>
                             </td>
                         </tr>
@@ -51,19 +32,31 @@
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
         <p>
-            Un cambio desde la primera sesión, Indiba os devolverá un aspecto sereno,
-            joven, firme y dulce. Un efecto que marca la diferencia en vuestra cara después de pasar
-            por ella. Una sola sesión es suficiente para obtener un resultado real y palpable.
+            Matriskin es una marca de alto rendimiento que ofrece productos que están
+            revolucionando el mercado, son actualmente una gran alternativa frente a la cirugía,
+            gracias a la alta concentración de principios activos. Este tipo de cosmética de alto
+            rendimiento adquiere cada vez más simpatizantes al ver los efectos de los tratamientos y,
+            sobre todo, para aquellas personas que no quieren pasar por un quirófano.
         </p>
         <p>
-            Si bien es cierto que su efecto es acumulativo: rejuvenece la piel, reafirma el
-            rostro, cuello y regenera el colágeno y elastina, y que cuantas más sesiones disfrutéis
-            más beneficios obtendrás. La sensación que produce es relajante y agradable.
+            <strong>Maderoterapia corporal</strong>, un tratamiento con grandes beneficios, este tratamiento
+            combina la maderoterapia tradicional oriental con el tratamiento Detox Body. Los
+            beneficios que tiene son combatir la piel de naranja, celulitis aportando una mayor
+            definición de la silueta a la vez que se realiza un drenaje linfático que en conjunto hace
+            una reducción del perímetro.
         </p>
         <p>
-            ¿Te lo vas a perder?
-            Este mes lo encontraréis en nuestros centros a un precio de 47€ la sesión facial
-            o corporal. ¡Os esperamos!
+            En In&Out puedes encontrar tratamientos de Matriskin al alcance de todos los
+            bolsillos y más durante todo el mes de Noviembre ya que podrás comprar tu sesión por
+            tan sólo <strong>47€</strong>.
+        </p>
+        <p>
+            Desde In&Out te invitamos a que pruebes este tratamiento maravillos que hará que
+            veas los resultados muy prontos.
+        </p>
+        <p>
+            Puedes pedir tu cita en nuestra web o a través de nuestros teléfonos. ¿A qué estas
+            esperando?
         </p>
         <p>
             <strong>
