--- a/promo.html
+++ b/promo.html
@@ -1,15 +1,27 @@
 <p>
-    Un cambio desde la primera sesión, Indiba os devolverá un aspecto sereno,
-    joven, firme y dulce. Un efecto que marca la diferencia en vuestra cara después de pasar
-    por ella. Una sola sesión es suficiente para obtener un resultado real y palpable.
+    Matriskin es una marca de alto rendimiento que ofrece productos que están
+    revolucionando el mercado, son actualmente una gran alternativa frente a la cirugía,
+    gracias a la alta concentración de principios activos. Este tipo de cosmética de alto
+    rendimiento adquiere cada vez más simpatizantes al ver los efectos de los tratamientos y,
+    sobre todo, para aquellas personas que no quieren pasar por un quirófano.
 </p>
 <p>
-    Si bien es cierto que su efecto es acumulativo: rejuvenece la piel, reafirma el
-    rostro, cuello y regenera el colágeno y elastina, y que cuantas más sesiones disfrutéis
-    más beneficios obtendrás. La sensación que produce es relajante y agradable.
-</p>
-<p>
-    ¿Te lo vas a perder?
-    Este mes lo encontraréis en nuestros centros a un precio de 47€ la sesión facial
-    o corporal. ¡Os esperamos!
+    <strong>Maderoterapia corporal</strong>, un tratamiento con grandes beneficios, este tratamiento
+    combina la maderoterapia tradicional oriental con el tratamiento Detox Body. Los
+    beneficios que tiene son combatir la piel de naranja, celulitis aportando una mayor
+    definición de la silueta a la vez que se realiza un drenaje linfático que en conjunto hace
+    una reducción del perímetro.
+    </p>
+    <p>
+    En In&Out puedes encontrar tratamientos de Matriskin al alcance de todos los
+    bolsillos y más durante todo el mes de Noviembre ya que podrás comprar tu sesión por
+    tan sólo <strong>47€</strong>.
+    </p>
+    <p>
+    Desde In&Out te invitamos a que pruebes este tratamiento maravillos que hará que
+    veas los resultados muy prontos.
+    </p>
+    <p>
+    Puedes pedir tu cita en nuestra web o a través de nuestros teléfonos. ¿A qué estas
+    esperando?
 </p>
