--- a/newsletter.html
+++ b/newsletter.html
@@ -1,8 +1,8 @@
 <p>
-    ¿Quieres recuperar tu silueta después del verano? en In&Out hemos preparado
-    una promoción de Noviembre perfecta para dar el primer paso a la hora de recuperar tu
-    figura. ¿Quieres saber más? No te pierdas el tratamiento de maderoterapia corporal que
-    tenemos para ti.
+    ¿Quieres darle a tú piel un mimo con visperas a las fiestas que se aproximan? En
+    In & Out puedes encontrar el tratamiento adecuado, <strong>Mascarilla de Oro y cuarzo rosa</strong>.
+    Este lujoso tratamiento restaura los niveles de hidratación de la piel, protegiéndola frente
+    a una deshidratación futura.
 </p>
 </p>
 </td>
@@ -15,7 +15,7 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-77" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-1" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
                                     COMPRA
@@ -32,31 +32,24 @@
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
         <p>
-            Matriskin es una marca de alto rendimiento que ofrece productos que están
-            revolucionando el mercado, son actualmente una gran alternativa frente a la cirugía,
-            gracias a la alta concentración de principios activos. Este tipo de cosmética de alto
-            rendimiento adquiere cada vez más simpatizantes al ver los efectos de los tratamientos y,
-            sobre todo, para aquellas personas que no quieren pasar por un quirófano.
+            ¿Cuales son los beneficios de la mascarilla de Oro? Son muchos los beneficios de
+            la mascarilla de oro y cuarzo rosa, pero sin duda su efecto flash consiguiendo dar a tu piel
+            un aspecto radiante.Otro de los grandes beneficios de la mascarilla de Oro es su efecto
+            inmediato, desde el primer momento la piel luce mas descansada y mas hidratada
+            mejorando la elasticidad. El oro es conocido desde la antigüedad por sus efectos
+            ampliamente demostrados, contiene un gran poder hidratante, antiedad y aporta gran
+            luminosidad, consiguiendo un efecto sellado y cierre del poro instantáneo. El cuarzo rosa
+            es una piedra con propiedades energéticas que mejora la circulación y el tono de tu piel
+            alisando las lineas finas dando a tu piel un tono uniforme. Además es un tratamiento muy
+            eficaz en la lucha contra las bolsas ya que estimula la circulacion sanguinea y refuerza la
+            barrera protectora.
         </p>
         <p>
-            <strong>Maderoterapia corporal</strong>, un tratamiento con grandes beneficios, este tratamiento
-            combina la maderoterapia tradicional oriental con el tratamiento Detox Body. Los
-            beneficios que tiene son combatir la piel de naranja, celulitis aportando una mayor
-            definición de la silueta a la vez que se realiza un drenaje linfático que en conjunto hace
-            una reducción del perímetro.
-        </p>
-        <p>
-            En In&Out puedes encontrar tratamientos de Matriskin al alcance de todos los
-            bolsillos y más durante todo el mes de Noviembre ya que podrás comprar tu sesión por
-            tan sólo <strong>47€</strong>.
-        </p>
-        <p>
-            Desde In&Out te invitamos a que pruebes este tratamiento maravillos que hará que
-            veas los resultados muy prontos.
-        </p>
-        <p>
-            Puedes pedir tu cita en nuestra web o a través de nuestros teléfonos. ¿A qué estas
-            esperando?
+            Si quieres disfrutar de todos sus beneficios de la mascarilla de oro y cuarzo rosa ya
+            puedes encontrarla en nuestros centros In&Out. ¿¿Te lo vas a perder??
+            <strong>Solo durante el
+                mes de Diciembre disfruta de esta oferta única por tan sólo 40€</strong>
+            ¡¡Pide tu cita!!
         </p>
         <p>
             <strong>
