--- a/promo.html
+++ b/promo.html
@@ -1,27 +1,23 @@
 <p>
-    Matriskin es una marca de alto rendimiento que ofrece productos que están
-    revolucionando el mercado, son actualmente una gran alternativa frente a la cirugía,
-    gracias a la alta concentración de principios activos. Este tipo de cosmética de alto
-    rendimiento adquiere cada vez más simpatizantes al ver los efectos de los tratamientos y,
-    sobre todo, para aquellas personas que no quieren pasar por un quirófano.
-</p>
-<p>
-    <strong>Maderoterapia corporal</strong>, un tratamiento con grandes beneficios, este tratamiento
-    combina la maderoterapia tradicional oriental con el tratamiento Detox Body. Los
-    beneficios que tiene son combatir la piel de naranja, celulitis aportando una mayor
-    definición de la silueta a la vez que se realiza un drenaje linfático que en conjunto hace
-    una reducción del perímetro.
+    ¿Necesitas renovar y limpiar el cutis? ¿Qué te parece poder dedicar una hora y
+    cuarto al cuidado de tu piel? Es más, ¿Qué te parece reservar un tiempo para mimarte a ti
+    misma? Sabemos que día a día te ganas de sobra poder darte un capricho de vez en
+    cuando cuidando de ti y de tu piel, ahora es el momento y que mejor época justo después
+    de las vacaciones de Navidad... Llega la promo de Enero: Higiene facial de Carita.
+    Carita es sinónimo de resultados, de grandes momentos de cuidado de la piel.
+    </p><p>
+    Déjate seducir por una firma de cosmética de lujo y gran calidad. ¿Te lo vas a perder?
+    El tratamiento comienza con un desmaquillado completo, después aplicamos el
+    mítico renovateur. Aquí no queda todo, después se realiza un peeling de ultrasonidos, por
+    supuesto después aplicamos vapor para facilitar la posterior extracción y limpieza de
+    poros. Para terminar, aplicamos una mascarilla específica. El peeling de ultrasonidos es
+    sin duda un tratamiento muy demandado por sus grandes beneficios, entre ellos reduce la
+    visibilidad de las arrugas más leves, las cicatrices producidas por el acné, ayuda a
+    eliminar puntos negros y en la limpieza de los poros.
     </p>
     <p>
-    En In&Out puedes encontrar tratamientos de Matriskin al alcance de todos los
-    bolsillos y más durante todo el mes de Noviembre ya que podrás comprar tu sesión por
-    tan sólo <strong>47€</strong>.
-    </p>
-    <p>
-    Desde In&Out te invitamos a que pruebes este tratamiento maravillos que hará que
-    veas los resultados muy prontos.
-    </p>
-    <p>
-    Puedes pedir tu cita en nuestra web o a través de nuestros teléfonos. ¿A qué estas
-    esperando?
+    ¿Buscas un centro para limpieza facial en Málaga de reconocido prestigio y buenos
+    precios? Todo lo que buscas y mucho más lo puedes encontrar en cualquiera de los dos
+    centros. Pide ya tu cita por teléfono o a través de nuestra web y no pierdas esta gran
+    oportunidad. <strong>Sólo el mes Enero estará a 40€, os esperamos!!</strong>
 </p>
