--- a/src/apps/hours/index.html
+++ b/src/apps/hours/index.html
@@ -28,7 +28,7 @@
             <tr><td>{{day_3}}</td><td>10:00 - 19:00</td></tr>
             <tr><td>{{day_4}}</td><td>10:00 - 19:00</td></tr>
             <tr><td>{{day_5}}</td><td>10:00 - 19:00</td></tr>
-            <tr><td>{{day_6}}</td><td>10:00 - 14:00</td></tr>
+            <tr><td>{{day_6}}</td><td>CERRADO</td></tr>
         </table>
         <br/>
         <div style="font-size: 12px; color: #b95959;">
