--- a/web-app-deploy/seo/es/hours.html
+++ b/web-app-deploy/seo/es/hours.html
@@ -30,12 +30,12 @@
                 </tbody>
             </table>
         </div>
-        <div class="box"> CALLE COMPANIA, 42 - MALAGA <br> <br>
+        <div class="box"> CALLE BUENAVENTURA, 4 - MALAGA <br> <br>
             <table>
                 <tbody>
                 <tr>
                     <td>Lunes</td>
-                    <td>CERRADO</td>
+                    <td>10:00 - 19:00</td>
                 </tr>
                 <tr>
                     <td>Martes</td>
@@ -55,7 +55,7 @@
                 </tr>
                 <tr>
                     <td>Sabado</td>
-                    <td>10:00 - 14:00</td>
+                    <td>CERRADO</td>
                 </tr>
                 </tbody>
             </table>
