--- a/newsletter.html
+++ b/newsletter.html
@@ -1,8 +1,12 @@
 <p>
-    ¿Quieres darle a tú piel un mimo con visperas a las fiestas que se aproximan? En
-    In & Out puedes encontrar el tratamiento adecuado, <strong>Mascarilla de Oro y cuarzo rosa</strong>.
-    Este lujoso tratamiento restaura los niveles de hidratación de la piel, protegiéndola frente
-    a una deshidratación futura.
+    ¿Aún no conoces los beneficios del tratamiento <strong>Indiba Deep Beauty</strong>? ¿A qué
+    estás esperando?
+</p><p>
+¿No sabes en qué consiste? En un tratamiento efectivo, no invasivo, que
+mejora el aspecto de nuestra piel en una sola sesión. ¿Pedís mucho? Puede, pero os
+aseguramos que es posible. Indiba, modalidad de radiofrecuencia capaz de hacer todo
+esto. Un método increíble para la piel capaz de mejorar la flacidez, hidratación, celulitis,...
+¡Resulta casi mágico!
 </p>
 </p>
 </td>
@@ -15,10 +19,18 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-1" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-86" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
-                                    COMPRA
+                                    COMPRA INDIBA FACIAL
+                                </a>
+                            </td>
+                            <td>&nbsp;</td>
+                            <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-88" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
+                                    text-decoration: none; text-decoration: none; padding: 15px 25px;
+                                    border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
+                                    COMPRA INDIBA CORPORAL
                                 </a>
                             </td>
                         </tr>
@@ -32,25 +44,18 @@
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
         <p>
-            ¿Cuales son los beneficios de la mascarilla de Oro? Son muchos los beneficios de
-            la mascarilla de oro y cuarzo rosa, pero sin duda su efecto flash consiguiendo dar a tu piel
-            un aspecto radiante.Otro de los grandes beneficios de la mascarilla de Oro es su efecto
-            inmediato, desde el primer momento la piel luce mas descansada y mas hidratada
-            mejorando la elasticidad. El oro es conocido desde la antigüedad por sus efectos
-            ampliamente demostrados, contiene un gran poder hidratante, antiedad y aporta gran
-            luminosidad, consiguiendo un efecto sellado y cierre del poro instantáneo. El cuarzo rosa
-            es una piedra con propiedades energéticas que mejora la circulación y el tono de tu piel
-            alisando las lineas finas dando a tu piel un tono uniforme. Además es un tratamiento muy
-            eficaz en la lucha contra las bolsas ya que estimula la circulacion sanguinea y refuerza la
-            barrera protectora.
-        </p>
-        <p>
-            Si quieres disfrutar de todos sus beneficios de la mascarilla de oro y cuarzo rosa ya
-            puedes encontrarla en nuestros centros In&Out. ¿¿Te lo vas a perder??
-            <strong>Solo durante el
-                mes de Diciembre disfruta de esta oferta única por tan sólo 40€</strong>
-            ¡¡Pide tu cita!!
-        </p>
+Un cambio desde la primera sesión, <strong>Indiba</strong> os devolverá un aspecto sereno,
+joven, firme y dulce. Un efecto que marca la diferencia después de pasar por ella. Una
+sola sesión es suficiente para obtener un resultado real y palpable.
+</p><p></p>
+Si bien es cierto que su efecto es acumulativo: rejuvenece la piel, reafirma el
+rostro, cuello y regenera el colágeno y elastina, y que cuantas más sesiones disfrutéis
+más beneficios obtendrás. La sensación que produce es relajante y agradable.
+</p><p></p>
+¿Te lo vas a perder?
+Este mes de marzo lo encontraréis en nuestros centros a un precio de <strong>47€</strong> la
+sesión facial o corporal. ¡Os esperamos!
+</p>
         <p>
             <strong>
                 Si no quieres recibir más promociones entra en tu
