--- a/novedad.html
+++ b/novedad.html
@@ -1,14 +1,42 @@
 <p>
-    Este virus no nos detiene y es por ello que desde In and Out Málaga llevamos varios dias trabajando en nuestra web
-    para llevaros a casa vuestros productos favoritos de belleza.
-</p><p>
-Podeis acceder a traves de <a href="/es/products" onclick="window.navigate(this, event)">este enlance</a> además,
-    hemos preparado un regalo para los primeros
-    pedidos que realiceis.
-</p><p>
-Recordar que seguimos estando activas para ofrecerte cualquier tipo de asesoramiento o duda durante la cuarentena, a
-    través de nuestro teléfono 633909103, email info@inandoutbelleza.com o a través de nuestras redes social Instagram o
-    Facebook.
-</p><p>
-    Estamos deseando volver a veros. <strong>Un fuerte abrazo de todo vuestro equipo.</strong>
+    Ha llegado a nuestro centro In&Out... sigue leyendo...
+    </p>
+    </p>
+    <strong>¿QUÉ ES?</strong>
+    <p>
+    <p>
+    LPG, es una técnica natural, no invansiva y no agresiva. Se trata de un
+    equipo que dispone un cabezal compuesto por rodillos motorizados que se van
+    desplazando por el cuerpo. Combina tres movimientos: ondulado, en espiga y en
+    forma de ocho. Gracias a esta combinación de movimientos se consigue una
+    estimulación mecánica de la piel que permite reactivar el mecanismo de las
+    células. Así, el organismo es capaz de acelerar la producción de sustancias
+    rejuvenecedoras como el colágeno, la elastina y el ácido hialurónico y conseguir
+    una piel más firme, activar el proceso de eliminación de células grasas para
+    estilizar la silueta y estimular un drenaje linfático para una acción detox profunda.
+    </p>
+    <p>
+    <strong>¿PARA QUÉ SIRVE?</strong>
+    </p>
+    <p>
+    LPG a nivel corporal combate la celulitis, elimina la grasa localiza,
+    reafirma la piel y reduce el efecto de piernas cansadas, provocando una
+    sensación de bienestar y mejoría general de todo el organismo. A nivel de facial
+    esta tecnología estimula el rejuvenecimiento facial reafirmadno los tejidos y
+    aportando una mayor elasticidad.
+    </p>
+    <p>
+    Los resultados se pueden notar a partir de la primera sesión. En cuanto al
+    número de sesiones será el profesional el que decida el número de sesiones en
+    función de la necesidad de cada piel aunque lo recomendado es un ciclo de 40
+    minutos dos veces por semana.
+    </p>
+    <p>
+    ¿A qué estás esperando para pedir cita? Pidela sin compromiso y
+    estaremos encantadas de atenderte para hacerte el protocolo más adecuado a
+    la necesidad que tengas. Su precio será de 60€ la sesión aunque también te
+    puedes beneficiar de nuestros bonos.
+    </p>
+    <p>
+    ¡Os esperamos!
 </p>
