--- a/promo.html
+++ b/promo.html
@@ -1,23 +1,22 @@
 <p>
-    ¿Necesitas renovar y limpiar el cutis? ¿Qué te parece poder dedicar una hora y
-    cuarto al cuidado de tu piel? Es más, ¿Qué te parece reservar un tiempo para mimarte a ti
-    misma? Sabemos que día a día te ganas de sobra poder darte un capricho de vez en
-    cuando cuidando de ti y de tu piel, ahora es el momento y que mejor época justo después
-    de las vacaciones de Navidad... Llega la promo de Enero: Higiene facial de Carita.
-    Carita es sinónimo de resultados, de grandes momentos de cuidado de la piel.
-    </p><p>
-    Déjate seducir por una firma de cosmética de lujo y gran calidad. ¿Te lo vas a perder?
-    El tratamiento comienza con un desmaquillado completo, después aplicamos el
-    mítico renovateur. Aquí no queda todo, después se realiza un peeling de ultrasonidos, por
-    supuesto después aplicamos vapor para facilitar la posterior extracción y limpieza de
-    poros. Para terminar, aplicamos una mascarilla específica. El peeling de ultrasonidos es
-    sin duda un tratamiento muy demandado por sus grandes beneficios, entre ellos reduce la
-    visibilidad de las arrugas más leves, las cicatrices producidas por el acné, ayuda a
-    eliminar puntos negros y en la limpieza de los poros.
-    </p>
-    <p>
-    ¿Buscas un centro para limpieza facial en Málaga de reconocido prestigio y buenos
-    precios? Todo lo que buscas y mucho más lo puedes encontrar en cualquiera de los dos
-    centros. Pide ya tu cita por teléfono o a través de nuestra web y no pierdas esta gran
-    oportunidad. <strong>Sólo el mes Enero estará a 40€, os esperamos!!</strong>
+    ¿Aún no conoces los beneficios del tratamiento <strong>Indiba Deep Beauty</strong>? ¿A qué
+    estás esperando?
+</p><p>
+¿No sabes en qué consiste? En un tratamiento efectivo, no invasivo, que
+mejora el aspecto de nuestra piel en una sola sesión. ¿Pedís mucho? Puede, pero os
+aseguramos que es posible. Indiba, modalidad de radiofrecuencia capaz de hacer todo
+esto. Un método increíble para la piel capaz de mejorar la flacidez, hidratación, celulitis,...
+¡Resulta casi mágico!
+</p><p>
+Un cambio desde la primera sesión, <strong>Indiba</strong> os devolverá un aspecto sereno,
+joven, firme y dulce. Un efecto que marca la diferencia después de pasar por ella. Una
+sola sesión es suficiente para obtener un resultado real y palpable.
+</p><p></p>
+Si bien es cierto que su efecto es acumulativo: rejuvenece la piel, reafirma el
+rostro, cuello y regenera el colágeno y elastina, y que cuantas más sesiones disfrutéis
+más beneficios obtendrás. La sensación que produce es relajante y agradable.
+</p><p></p>
+¿Te lo vas a perder?
+Este mes de marzo lo encontraréis en nuestros centros a un precio de <strong>47€</strong> la
+sesión facial o corporal. ¡Os esperamos!
 </p>
