adding cristina and lidia to calendar

--- a/newsletter.html
+++ b/newsletter.html
@@ -1,12 +1,8 @@
 <p>
-    ¿Aún no conoces los beneficios del tratamiento <strong>Indiba Deep Beauty</strong>? ¿A qué
-    estás esperando?
-</p><p>
-¿No sabes en qué consiste? En un tratamiento efectivo, no invasivo, que
-mejora el aspecto de nuestra piel en una sola sesión. ¿Pedís mucho? Puede, pero os
-aseguramos que es posible. Indiba, modalidad de radiofrecuencia capaz de hacer todo
-esto. Un método increíble para la piel capaz de mejorar la flacidez, hidratación, celulitis,...
-¡Resulta casi mágico!
+    Hoy os presentamos el nuevo tratamiento facial de Natura Bissé, <em>3D Collagen
+Shock</em>, esculpe el contorno de tu rostro con su triple fusión: colágeno, eficacia y firmeza.
+Es un poderoso tratamiento antienvejecimiento que hidrata en profundidad y nutre la piel
+intensamente para devolverle toda su firmeza.
 </p>
 </p>
 </td>
@@ -19,18 +15,10 @@ esto. Un método increíble para la piel capaz de mejorar la flacidez, hidrataci
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-86" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-102" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
-                                    COMPRA INDIBA FACIAL
-                                </a>
-                            </td>
-                            <td>&nbsp;</td>
-                            <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-88" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
-                                    text-decoration: none; text-decoration: none; padding: 15px 25px;
-                                    border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
-                                    COMPRA INDIBA CORPORAL
+                                    COMPRA AHORA
                                 </a>
                             </td>
                         </tr>
@@ -44,17 +32,20 @@ esto. Un método increíble para la piel capaz de mejorar la flacidez, hidrataci
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
         <p>
-Un cambio desde la primera sesión, <strong>Indiba</strong> os devolverá un aspecto sereno,
-joven, firme y dulce. Un efecto que marca la diferencia después de pasar por ella. Una
-sola sesión es suficiente para obtener un resultado real y palpable.
-</p><p></p>
-Si bien es cierto que su efecto es acumulativo: rejuvenece la piel, reafirma el
-rostro, cuello y regenera el colágeno y elastina, y que cuantas más sesiones disfrutéis
-más beneficios obtendrás. La sensación que produce es relajante y agradable.
-</p><p></p>
-¿Te lo vas a perder?
-Este mes de marzo lo encontraréis en nuestros centros a un precio de <strong>47€</strong> la
-sesión facial o corporal. ¡Os esperamos!
+Os lo vamos a contar, ¿preparad@s para disfrutar? <em>3D Collagen Shock</em> combina
+tres tipos de colágenos de distintos pesos moleculares siendo capaz de actuar en las
+diferentes capas de la piel y ofrecer un increible efecto lifting y redensificante. La suma de
+ellos crean una película de efecto tensor en nuestra piel que nos ayuda a preservar la
+hidratación en su superficie y protegernos de las agresiones externas. Además este
+tratamiento estimula la síntesis de un nuevo colágeno consiguiendo con ello una acción
+rejuvenecedora integral.
+</p><p>
+No importa tu edad, ahora puedes lucir un cutis increiblemente elástico y tonificado.
+Unos contonos faciales redefinidos. Una tez rejuvenecida. Una piel renovada desde el
+interior. ¿A que estás esperando? Este mes de Abril os lo traemos en promoción por tan
+sólo 50€. Pide tu cita a través de nuestra web o en nuestros teléfonos.
+</p><p>
+¡Os esperamos!
 </p>
         <p>
             <strong>
