--- a/promo.html
+++ b/promo.html
@@ -1,22 +1,21 @@
 <p>
-    ¿Aún no conoces los beneficios del tratamiento <strong>Indiba Deep Beauty</strong>? ¿A qué
-    estás esperando?
+    Hoy os presentamos el nuevo tratamiento facial de Natura Bissé, <em>3D Collagen
+Shock</em>, esculpe el contorno de tu rostro con su triple fusión: colágeno, eficacia y firmeza.
+Es un poderoso tratamiento antienvejecimiento que hidrata en profundidad y nutre la piel
+intensamente para devolverle toda su firmeza.
 </p><p>
-¿No sabes en qué consiste? En un tratamiento efectivo, no invasivo, que
-mejora el aspecto de nuestra piel en una sola sesión. ¿Pedís mucho? Puede, pero os
-aseguramos que es posible. Indiba, modalidad de radiofrecuencia capaz de hacer todo
-esto. Un método increíble para la piel capaz de mejorar la flacidez, hidratación, celulitis,...
-¡Resulta casi mágico!
+Os lo vamos a contar, ¿preparad@s para disfrutar? <em>3D Collagen Shock</em> combina
+tres tipos de colágenos de distintos pesos moleculares siendo capaz de actuar en las
+diferentes capas de la piel y ofrecer un increible efecto lifting y redensificante. La suma de
+ellos crean una película de efecto tensor en nuestra piel que nos ayuda a preservar la
+hidratación en su superficie y protegernos de las agresiones externas. Además este
+tratamiento estimula la síntesis de un nuevo colágeno consiguiendo con ello una acción
+rejuvenecedora integral.
 </p><p>
-Un cambio desde la primera sesión, <strong>Indiba</strong> os devolverá un aspecto sereno,
-joven, firme y dulce. Un efecto que marca la diferencia después de pasar por ella. Una
-sola sesión es suficiente para obtener un resultado real y palpable.
-</p><p></p>
-Si bien es cierto que su efecto es acumulativo: rejuvenece la piel, reafirma el
-rostro, cuello y regenera el colágeno y elastina, y que cuantas más sesiones disfrutéis
-más beneficios obtendrás. La sensación que produce es relajante y agradable.
-</p><p></p>
-¿Te lo vas a perder?
-Este mes de marzo lo encontraréis en nuestros centros a un precio de <strong>47€</strong> la
-sesión facial o corporal. ¡Os esperamos!
+No importa tu edad, ahora puedes lucir un cutis increiblemente elástico y tonificado.
+Unos contonos faciales redefinidos. Una tez rejuvenecida. Una piel renovada desde el
+interior. ¿A que estás esperando? Este mes de Abril os lo traemos en promoción por tan
+sólo 50€. Pide tu cita a través de nuestra web o en nuestros teléfonos.
+</p><p>
+¡Os esperamos!
 </p>
