Some changes and fixes

--- a/newsletter.html
+++ b/newsletter.html
@@ -1,8 +1,13 @@
 <p>
-    Hoy os presentamos el nuevo tratamiento facial de Natura Bissé, <em>3D Collagen
-Shock</em>, esculpe el contorno de tu rostro con su triple fusión: colágeno, eficacia y firmeza.
-Es un poderoso tratamiento antienvejecimiento que hidrata en profundidad y nutre la piel
-intensamente para devolverle toda su firmeza.
+    ¿Quieres recuperar tu silueta? en In&Out hemos preparado una promoción de
+Mayo perfecta para dar el primer paso a la hora de recuperar tu figura. ¿Quieres saber
+más? No te pierdas el tratamiento de maderoterapia corporal que tenemos para ti.
+</p><p>
+Matriskin es una marca de alto rendimiento que ofrece productos que están
+revolucionando el mercado, son actualmente una gran alternativa frente a la cirugía,
+gracias a la alta concentración de principios activos. Este tipo de cosmética de alto
+rendimiento adquiere cada vez más simpatizantes al ver los efectos de los tratamientos y,
+sobre todo, para aquellas personas que no quieren pasar por un quirófano.
 </p>
 </p>
 </td>
@@ -15,7 +20,7 @@ intensamente para devolverle toda su firmeza.
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-102" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-77" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
                                     COMPRA AHORA
@@ -31,21 +36,22 @@ intensamente para devolverle toda su firmeza.
 <tr>
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-        <p>
-Os lo vamos a contar, ¿preparad@s para disfrutar? <em>3D Collagen Shock</em> combina
-tres tipos de colágenos de distintos pesos moleculares siendo capaz de actuar en las
-diferentes capas de la piel y ofrecer un increible efecto lifting y redensificante. La suma de
-ellos crean una película de efecto tensor en nuestra piel que nos ayuda a preservar la
-hidratación en su superficie y protegernos de las agresiones externas. Además este
-tratamiento estimula la síntesis de un nuevo colágeno consiguiendo con ello una acción
-rejuvenecedora integral.
+       <p>
+<strong>Maderoterapia corporal</strong>, un tratamiento con grandes beneficios, este tratamiento
+combina la maderoterapia tradicional oriental con el tratamiento Detox Body. Los
+beneficios que tiene son combatir la piel de naranja, celulitis aportando una mayor
+definición de la silueta a la vez que se realiza un drenaje linfático que en conjunto hace
+una reducción del perímetro.
 </p><p>
-No importa tu edad, ahora puedes lucir un cutis increiblemente elástico y tonificado.
-Unos contonos faciales redefinidos. Una tez rejuvenecida. Una piel renovada desde el
-interior. ¿A que estás esperando? Este mes de Abril os lo traemos en promoción por tan
-sólo 50€. Pide tu cita a través de nuestra web o en nuestros teléfonos.
+En In&Out puedes encontrar tratamientos de Matriskin al alcance de todos los
+bolsillos y más durante todo el mes de Mayo ya que podrás comprar tu sesión por tan <strong>sólo
+47€</strong>.
 </p><p>
-¡Os esperamos!
+Desde In&Out te invitamos a que pruebes este tratamiento maravillos que hará que
+veas los resultados muy prontos.
+</p><p>
+Puedes pedir tu cita en nuestra web o a través de nuestros teléfonos. ¿A qué estas
+esperando?
 </p>
         <p>
             <strong>
