--- a/promo.html
+++ b/promo.html
@@ -1,21 +1,29 @@
 <p>
-    Hoy os presentamos el nuevo tratamiento facial de Natura Bissé, <em>3D Collagen
-Shock</em>, esculpe el contorno de tu rostro con su triple fusión: colágeno, eficacia y firmeza.
-Es un poderoso tratamiento antienvejecimiento que hidrata en profundidad y nutre la piel
-intensamente para devolverle toda su firmeza.
+    ¿Necesitas renovar y limpiar el cutis? ¿Qué te parece poder dedicar una hora y
+cuarto al cuidado de tu piel? Es más, ¿Qué te parece reservar un tiempo para mimarte a ti
+misma? Sabemos que día a día te ganas de sobra poder darte un capricho de vez en
+cuando cuidando de ti y de tu piel, ahora es el momento y que mejor época justo después
+de las vacaciones de verano... Llega la promo de Octubre: Higiene facial de Carita.
+Carita es sinónimo de resultados, de grandes momentos de cuidado de la piel.
 </p><p>
-Os lo vamos a contar, ¿preparad@s para disfrutar? <em>3D Collagen Shock</em> combina
-tres tipos de colágenos de distintos pesos moleculares siendo capaz de actuar en las
-diferentes capas de la piel y ofrecer un increible efecto lifting y redensificante. La suma de
-ellos crean una película de efecto tensor en nuestra piel que nos ayuda a preservar la
-hidratación en su superficie y protegernos de las agresiones externas. Además este
-tratamiento estimula la síntesis de un nuevo colágeno consiguiendo con ello una acción
-rejuvenecedora integral.
+Déjate seducir por una firma de cosmética de lujo y gran calidad. El verano es una de las
+épocas más chulas del año, pero como todo tiene sus desventajas, es importante
+preparar y proteger nuestra piel después de éste, además de con nuestras rutinas de
+cada día en la que no puede faltar una crema con factor de protección solar, es
+recomendable de vez en cuando trabajar nuestra piel con un cuidado diferente y más
+específico en este caso os ofrecemos la Higiene facial de Carita. Limpia y renueva en
+profundidad. ¿Te lo vas a perder?
 </p><p>
-No importa tu edad, ahora puedes lucir un cutis increiblemente elástico y tonificado.
-Unos contonos faciales redefinidos. Una tez rejuvenecida. Una piel renovada desde el
-interior. ¿A que estás esperando? Este mes de Abril os lo traemos en promoción por tan
-sólo 50€. Pide tu cita a través de nuestra web o en nuestros teléfonos.
+El tratamiento comienza con un desmaquillado completo, después aplicamos el
+mítico renovateur. Aquí no queda todo, después se realiza un peeling de ultrasonidos, por
+supuesto después aplicamos vapor para facilitar la posterior extracción y limpieza de
+poros. Para terminar, aplicamos una mascarilla específica. El peeling de ultrasonidos es
+sin duda un tratamiento muy demandado por sus grandes beneficios, entre ellos reduce la
+visibilidad de las arrugas más leves, las cicatrices producidas por el acné, ayuda a
+eliminar puntos negros y en la limpieza de los poros.
 </p><p>
-¡Os esperamos!
+¿Buscas un centro para limpieza facial en Málaga de reconocido prestigio y buenos
+precios? Todo lo que buscas y mucho más lo puedes encontrar en cualquiera de los dos
+centros. Pide ya tu cita por teléfono o a través de nuestra web y no pierdas esta gran
+oportunidad. Sólo el mes Octubre estará a 40€, os esperamos!!
 </p>
