--- a/newsletter.html
+++ b/newsletter.html
@@ -1,14 +1,6 @@
-<p>
-    ¿Quieres recuperar tu silueta? en In&Out hemos preparado una promoción de
-Mayo perfecta para dar el primer paso a la hora de recuperar tu figura. ¿Quieres saber
-más? No te pierdas el tratamiento de maderoterapia corporal que tenemos para ti.
-</p><p>
-Matriskin es una marca de alto rendimiento que ofrece productos que están
-revolucionando el mercado, son actualmente una gran alternativa frente a la cirugía,
-gracias a la alta concentración de principios activos. Este tipo de cosmética de alto
-rendimiento adquiere cada vez más simpatizantes al ver los efectos de los tratamientos y,
-sobre todo, para aquellas personas que no quieren pasar por un quirófano.
-</p>
+<h4>Black Friday en nuestros centros In & Out</h4>
+<p>Desde las 21:00 del 24 hasta todo el 25 de Noviembre</p>
+<p>20% en todos los bonos (tarjeta regalo excluidas)</p>
 </p>
 </td>
 </tr>
@@ -20,7 +12,7 @@ sobre todo, para aquellas personas que no quieren pasar por un quirófano.
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-77" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
+                                <a href="https://www.inandoutbelleza.es/es/tarjetas" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
                                     COMPRA AHORA
@@ -36,23 +28,7 @@ sobre todo, para aquellas personas que no quieren pasar por un quirófano.
 <tr>
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-       <p>
-<strong>Maderoterapia corporal</strong>, un tratamiento con grandes beneficios, este tratamiento
-combina la maderoterapia tradicional oriental con el tratamiento Detox Body. Los
-beneficios que tiene son combatir la piel de naranja, celulitis aportando una mayor
-definición de la silueta a la vez que se realiza un drenaje linfático que en conjunto hace
-una reducción del perímetro.
-</p><p>
-En In&Out puedes encontrar tratamientos de Matriskin al alcance de todos los
-bolsillos y más durante todo el mes de Mayo ya que podrás comprar tu sesión por tan <strong>sólo
-47€</strong>.
-</p><p>
-Desde In&Out te invitamos a que pruebes este tratamiento maravillos que hará que
-veas los resultados muy prontos.
-</p><p>
-Puedes pedir tu cita en nuestra web o a través de nuestros teléfonos. ¿A qué estas
-esperando?
-</p>
+       <p>Té lo vas a perder?</p>
         <p>
             <strong>
                 Si no quieres recibir más promociones entra en tu
