--- a/promo.html
+++ b/promo.html
@@ -1,29 +1,27 @@
 <p>
-    ¿Necesitas renovar y limpiar el cutis? ¿Qué te parece poder dedicar una hora y
-cuarto al cuidado de tu piel? Es más, ¿Qué te parece reservar un tiempo para mimarte a ti
-misma? Sabemos que día a día te ganas de sobra poder darte un capricho de vez en
-cuando cuidando de ti y de tu piel, ahora es el momento y que mejor época justo después
-de las vacaciones de verano... Llega la promo de Octubre: Higiene facial de Carita.
-Carita es sinónimo de resultados, de grandes momentos de cuidado de la piel.
+    Estamos en una época en la que la piel necesita un buen tratamiento para
+prepararla para los futuros eventos que podamos tener en vísperas a las fiestas. Tenerla
+hidratada es esencial y para que los productos hidratantes sean aun más efectivos no hay
+nada mejor que un buen tratamiento. Para ello, en In and Out contamos con uno de los
+mejores tratamientros que se pueden encontrar en el mercado, el de vitamina C de Natura
+Bissé, llamado Royal Citrus Experience. ¿Quieres saber más? Sigue leyendo...
 </p><p>
-Déjate seducir por una firma de cosmética de lujo y gran calidad. El verano es una de las
-épocas más chulas del año, pero como todo tiene sus desventajas, es importante
-preparar y proteger nuestra piel después de éste, además de con nuestras rutinas de
-cada día en la que no puede faltar una crema con factor de protección solar, es
-recomendable de vez en cuando trabajar nuestra piel con un cuidado diferente y más
-específico en este caso os ofrecemos la Higiene facial de Carita. Limpia y renueva en
-profundidad. ¿Te lo vas a perder?
+“Inyección de vitaminas” es un tratamiento facial indicado para recuperar la
+luminosidad y firmeza de la piel a través de una relajante experiencia de aromaterapia
+cítrica. Este exquisito protocolo despierta tus sentidos aportando a la piel toda la energía
+de la vitamina C. Su extraordinaria acción antioxidante repara incluso las pieles más
+castigadas desvelando un cutis completamente hidratado y revitalizado con el que lucirás
+un rostro radiante. Está hecho con activos antioxidantes, reafirmantes y reavitalizantes
+consiguiendo redensificar y rellenar el tejido cutáneo lo que nos lleva a tener una piel
+radiante y con el tono unifome.
 </p><p>
-El tratamiento comienza con un desmaquillado completo, después aplicamos el
-mítico renovateur. Aquí no queda todo, después se realiza un peeling de ultrasonidos, por
-supuesto después aplicamos vapor para facilitar la posterior extracción y limpieza de
-poros. Para terminar, aplicamos una mascarilla específica. El peeling de ultrasonidos es
-sin duda un tratamiento muy demandado por sus grandes beneficios, entre ellos reduce la
-visibilidad de las arrugas más leves, las cicatrices producidas por el acné, ayuda a
-eliminar puntos negros y en la limpieza de los poros.
+La vitamina C es una fuente de juventud. Su excepcional acción antioxidante es
+capaz de neutralizar eficazmente el impacto negativo de los radicales libres y el estrés
+oxidativo causantes de la aparición de los signos de la edad. Con múltiples beneficios
+para tu cuerpo, esta vitamina ofrece protección biológica frente a los rayos solares, y es
+profundamente hidratante. Además, favorece de forma natural la producción de colágeno,
+mejorando la firmeza, y aporta una increíble luminosidad.
 </p><p>
-¿Buscas un centro para limpieza facial en Málaga de reconocido prestigio y buenos
-precios? Todo lo que buscas y mucho más lo puedes encontrar en cualquiera de los dos
-centros. Pide ya tu cita por teléfono o a través de nuestra web y no pierdas esta gran
-oportunidad. Sólo el mes Octubre estará a 40€, os esperamos!!
+Como ves, ¡la molécula vital para la salud de tu piel! ¿Su precio? <strong>40€ durante todo
+el mes de Noviembre</strong>. ¿Te lo vas a perder? ¡Os esperamos!
 </p>
