--- a/promo.html
+++ b/promo.html
@@ -1,27 +1,17 @@
 <p>
-    Estamos en una época en la que la piel necesita un buen tratamiento para
-prepararla para los futuros eventos que podamos tener en vísperas a las fiestas. Tenerla
-hidratada es esencial y para que los productos hidratantes sean aun más efectivos no hay
-nada mejor que un buen tratamiento. Para ello, en In and Out contamos con uno de los
-mejores tratamientros que se pueden encontrar en el mercado, el de vitamina C de Natura
-Bissé, llamado Royal Citrus Experience. ¿Quieres saber más? Sigue leyendo...
+    ¿Te apetece redefenir, energizar y rejuvenecer tu piel? Te presentamos el nuevo
+Diamond Energy de Naura Bissé, basado en la icónica colección Diamond es un
+tratamiento global antiedad de efecto lifting inmmediato con un masaje mio-facial advance
+con gua-sha que no te dejará indiferente.
 </p><p>
-“Inyección de vitaminas” es un tratamiento facial indicado para recuperar la
-luminosidad y firmeza de la piel a través de una relajante experiencia de aromaterapia
-cítrica. Este exquisito protocolo despierta tus sentidos aportando a la piel toda la energía
-de la vitamina C. Su extraordinaria acción antioxidante repara incluso las pieles más
-castigadas desvelando un cutis completamente hidratado y revitalizado con el que lucirás
-un rostro radiante. Está hecho con activos antioxidantes, reafirmantes y reavitalizantes
-consiguiendo redensificar y rellenar el tejido cutáneo lo que nos lleva a tener una piel
-radiante y con el tono unifome.
+La clave es una infusión de energía gracias a activos de última generación que
+estimulan la piel y minimizan el envejecimiento. Te encantará el lujoso Advanced
+Myofascial Massage. Con meticulosas técnicas de masaje realizadas con una exclusiva
+gua-sha y directamente con las manos de la profesional, estimulando los músculos
+faciales, embelleciendo los contornos del rostro y potenciando la firmeza.
 </p><p>
-La vitamina C es una fuente de juventud. Su excepcional acción antioxidante es
-capaz de neutralizar eficazmente el impacto negativo de los radicales libres y el estrés
-oxidativo causantes de la aparición de los signos de la edad. Con múltiples beneficios
-para tu cuerpo, esta vitamina ofrece protección biológica frente a los rayos solares, y es
-profundamente hidratante. Además, favorece de forma natural la producción de colágeno,
-mejorando la firmeza, y aporta una increíble luminosidad.
+Regálate un cutis perfecto: más firme, más luminoso, poderosamente hidratado y
+por tan <strong>sólo 70€</strong> todo el mes de Diciembre.
 </p><p>
-Como ves, ¡la molécula vital para la salud de tu piel! ¿Su precio? <strong>40€ durante todo
-el mes de Noviembre</strong>. ¿Te lo vas a perder? ¡Os esperamos!
+¡Ven a probarlo en nuestros centros!
 </p>
