--- a/newsletter.html
+++ b/newsletter.html
@@ -1,6 +1,9 @@
-<h4>Black Friday en nuestros centros In & Out</h4>
-<p>Desde las 21:00 del 24 hasta todo el 25 de Noviembre</p>
-<p>20% en todos los bonos (tarjeta regalo excluidas)</p>
+<p>
+    ¿Te apetece redefenir, energizar y rejuvenecer tu piel? Te presentamos el nuevo
+Diamond Energy de Naura Bissé, basado en la icónica colección Diamond es un
+tratamiento global antiedad de efecto lifting inmmediato con un masaje mio-facial advance
+con gua-sha que no te dejará indiferente.
+</p>
 </p>
 </td>
 </tr>
@@ -12,7 +15,7 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/tarjetas" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-109" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
                                     COMPRA AHORA
@@ -28,11 +31,15 @@
 <tr>
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-       <p>Té lo vas a perder?</p>
-        <p>
-            <strong>
-                Si no quieres recibir más promociones entra en tu
-                <a href="https://www.inandoutbelleza.es/es/cuenta" style="color: #56ab2a;">cuenta</a>
-                y elimina la subscripción
-            </strong>
-        </p>
+       <p>
+La clave es una infusión de energía gracias a activos de última generación que
+estimulan la piel y minimizan el envejecimiento. Te encantará el lujoso Advanced
+Myofascial Massage. Con meticulosas técnicas de masaje realizadas con una exclusiva
+gua-sha y directamente con las manos de la profesional, estimulando los músculos
+faciales, embelleciendo los contornos del rostro y potenciando la firmeza.
+</p><p>
+Regálate un cutis perfecto: más firme, más luminoso, poderosamente hidratado y
+por tan <strong>sólo 70€</strong> todo el mes de Diciembre.
+</p><p>
+¡Ven a probarlo en nuestros centros!
+</p>
