--- a/newsletter.html
+++ b/newsletter.html
@@ -1,8 +1,12 @@
 <p>
-    ¿Te apetece redefenir, energizar y rejuvenecer tu piel? Te presentamos el nuevo
-Diamond Energy de Naura Bissé, basado en la icónica colección Diamond es un
-tratamiento global antiedad de efecto lifting inmmediato con un masaje mio-facial advance
-con gua-sha que no te dejará indiferente.
+    ¿Aún no conoces los beneficios del tratamiento <strong>Indiba Deep Beauty</strong>? ¿A que 
+    estas esperando? ¡Ahora más que nunca es la ocasión!
+    </p><p>
+¿No sabes en qué consiste? En un tratamiento efectivo, no invasivo, que mejora
+el aspecto de nuestra piel en una sola sesión. ¿Pedís mucho? Puede, pero os
+aseguramos que es posible. <strong>Indiba</strong>, modalidad de radiofrecuencia capaz de hacer por
+vuestro rostro todo esto. Un método increíble para la piel capaz de mejorar la flacidez,
+hidratación... ¡Resulta casi mágico!
 </p>
 </p>
 </td>
@@ -15,10 +19,18 @@ con gua-sha que no te dejará indiferente.
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
-                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-109" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-86" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
                                     text-decoration: none; text-decoration: none; padding: 15px 25px;
                                     border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
-                                    COMPRA AHORA
+                                    COMPRA FACIAL
+                                </a>
+                            </td>
+                            <td>&nbsp;</td>
+                            <td align="center" style="border-radius: 3px;" bgcolor="#56ab2a">
+                                <a href="https://www.inandoutbelleza.es/es/cesta?addCart=TRT-88" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff;
+                                    text-decoration: none; text-decoration: none; padding: 15px 25px;
+                                    border-radius: 2px; border: 1px solid #56ab2a; display: inline-block;">
+                                    COMPRA CORPORAL
                                 </a>
                             </td>
                         </tr>
@@ -32,14 +44,23 @@ con gua-sha que no te dejará indiferente.
     <td bgcolor="#ffffff" align="left"
         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Arial', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
        <p>
-La clave es una infusión de energía gracias a activos de última generación que
-estimulan la piel y minimizan el envejecimiento. Te encantará el lujoso Advanced
-Myofascial Massage. Con meticulosas técnicas de masaje realizadas con una exclusiva
-gua-sha y directamente con las manos de la profesional, estimulando los músculos
-faciales, embelleciendo los contornos del rostro y potenciando la firmeza.
+
+<strong>Indiba</strong> os devolverá, un aspecto sereno, joven, firme y dulce. Un efecto que
+marca la diferencia en vuestra cara después de pasar por ella. Una sola sesión es
+suficiente para obtener un resultado real y palpable.
 </p><p>
-Regálate un cutis perfecto: más firme, más luminoso, poderosamente hidratado y
-por tan <strong>sólo 70€</strong> todo el mes de Diciembre.
+Si bien es cierto que su efecto es acumulativo: rejuvenece la piel, reafirma el
+rostro, cuello y regenera el colágeno y elastina, y que cuantas más sesiones disfrutéis
+más beneficios obtendrás. La sensación que produce es relajante y agradable.
 </p><p>
-¡Ven a probarlo en nuestros centros!
+¿Te lo vas a perder?
+Este mes lo encontraréis en nuestros centros a un precio de 47€ la sesión facial
+o corporal. ¡Que mejor manera de empezar el año! ¡Os esperamos!
 </p>
+<p>
+            <strong>
+                Si no quieres recibir más promociones entra en tu
+                <a href="https://www.inandoutbelleza.es/es/cuenta" style="color: #56ab2a;">cuenta</a>
+                y elimina la subscripción
+            </strong>
+        </p>
